goldilocks/overlay/ingress.yaml
#
#  Author: Nho Luong
#  Date: 2021-11-22 14:53:54 +0000 (Mon, 22 Nov 2021)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/nholuongut/kubernetes-configs
#
#  License: see accompanying Nho Luong LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/nholuong
#

# ============================================================================ #
#                      G o l d i l o c k s   I n g r e s s
# ============================================================================ #

---
#apiVersion: extensions/v1beta1  # old
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks
  namespace: goldilocks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # deprecated, use ingressClassName under spec section for Kubernetes 1.18+
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # XXX: Edit to make available externally or apply common ingress.nginx.patch.yaml with shared IP list eg. Cloudflare
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,
      172.16.0.0/16,
      192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    # XXX: Edit
    - hosts:
        - goldilocks.DOMAIN.COM
      secretName: goldilocks-tls
  rules:
    # XXX: Edit
    - host: goldilocks.DOMAIN.COM
      http:
        paths:
          # XXX: Edit
          - path: /
            pathType: Prefix  # for new networking.k8s.io/v1
            backend:
              #serviceName: goldilocks-dashboard
              #servicePort: 80
              service:
                name: goldilocks-dashboard
                port:
                  name: http
                  #number: 80
